--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       <li><a href="/">Home</a></li>
     </ul>
   </nav>
-  <div class="content">
+  <div class="container">
     {{ content }}
   </div>
 </body>
