--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="/css/main.css" />
+  <meta charset="utf-8" />
 </head>
 <body>
   <nav>
